admission/ValidatingAdmissionPolicy/policies/poststart-tcpsocket-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poststart-tcpsocket-host-initcontainers
  annotations:
    kubeapt.io/uuid: "ddff5010-e03c-4791-ae99-ae1f6f9cfe24"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
